# model_matching

./: CMakeLists.txt  README.md
include/: point3d.hpp  pose_clustering.hpp  rgbd.hpp  sampler.hpp  stocs.hpp
include/super4pcs/: pairCreationFunctor.h
include/super4pcs/accelerators/: CMakeLists.txt  bbox.h  kdtree.h  normalset.h
models/024_bowl/: textured_vertices.ply
models/dove/: textured_vertices.ply
models/obj_06/: textured_vertices.ply
src/: model_preprocess.cpp  pose_clustering.cpp  rgbd.cpp  stocs.cpp  stocs_match_one_object.cpp
